nanoflann 1.0.1: (In svn/trunk)
  * Fixed warnings for MSVC and for GCC with "-Wall -pedantic"
  * Updated performance tests to work with the final nanoflann code (they were 
     written for a very early version).

nanoflann 1.0.0: Released Aug 30, 2011
  * Initial version
